[package]
name = "fudu_rust"
version = "0.1.0"
authors = ["glider110 <1026316503@qq.com>"]
edition = "2018"

[profile.release]
panic = 'abort'

[profile.dev]
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = {version="2.2.1"}
tungstenite={version="0.13.0"}
serde_json = ""
crossbeam =""